@@ -161,6 +161,30 @@ public class CharsetTest extends AbstractTypeTester {
 
    
     @Path("/")
+    public static class JSONObjectResource extends CharsetResource<JSONObject> {}
+
+    public void testJSONObjectRepresentation() throws Exception {
+        JSONObject object = new JSONObject();
+        object.put("userid", 1234).
+        put("username", CONTENT).
+        put("email", "a@b").
+        put("password", "****");
+
+        _test(object, JSONObjectResource.class, MediaType.APPLICATION_JSON_TYPE);
+    }
+
+    @Path("/")
+    public static class JSONOArrayResource extends CharsetResource<JSONArray> {}
+
+    public void testJSONArrayRepresentation() throws Exception {
+        JSONArray array = new JSONArray();
+        array.put(CONTENT).put("Two").put("Three").put(1).put(2.0);
+
+        _test(array, JSONOArrayResource.class, MediaType.APPLICATION_JSON_TYPE);
+    }
+
+
+    @Path("/")
     public static class JAXBBeanResource extends CharsetResource<JAXBBean> {}
     
     public void testJAXBBeanXMLRepresentation() {
